--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,26 @@
 h1 {
   border: 4px solid black;
 }
+.link:hover {
+  color: var(--color-brand-light);
+}
+
+/* Hero section*/
+.hero-title {
+  color: var(--color-primary-light);
+  font-family: sans-serif;
+}
+
+.hero-title .accent {
+  color: var(--color-brand-light);
+}
+
+/*Advantages section*/
+.advantages-list {
+  color: var(--color-primary-light);
+  background-color: var(--color-brand-light);
+}
+
+.section-title .accent {
+  counter-reset: var(--color-brand-light);
+}
