--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,35 @@
 h1 {
   border: 4px solid black;
 }
+
+/* Base*/
+body {
+  color: var(--color-primary-dark);
+}
+
+ul {
+  list-style-type: none;
+}
+
+/*Button*/
+
+.button {
+  columns: var(--color-primary-light);
+  background-color: var(--color-brand-light);
+  border: 2px solid var(--color-brand-light);
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.button:hover {
+  color: var(--color-brand-dark);
+  background-color: transparent;
+}
+/*Link*/
+
+link {
+  color: var(--color-primary-light);
+}
 .link:hover {
   color: var(--color-brand-light);
 }
@@ -8,7 +37,7 @@ h1 {
 /* Hero section*/
 .hero-title {
   color: var(--color-primary-light);
-  font-family: sans-serif;
+  font-family: "Playwrite USA Traditional Guides", sans-serif;
 }
 
 .hero-title .accent {
